# viddup

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  implementation_plan.md  pyproject.toml
.github/workflows/: ci.yml
docs/: demo.tape  record_demo.sh
docs/assets/: demo.cast
scripts/: generate_demo_videos.py
tests/: conftest.py  test_comparator.py  test_fingerprinter.py  test_scanner.py
viddup/: __init__.py  cli.py  config.py
viddup/core/: __init__.py  comparator.py  database.py  fingerprinter.py  html_reporter.py  reporter.py  scanner.py
viddup/utils/: __init__.py  ffmpeg_utils.py
