[project]
name = "viddup"
version = "0.2.0"
description = "A fast, local video duplicate detector"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["video", "duplicate", "deduplication", "cli"]
authors = [{ name = "VidDup Contributors" }]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "imagehash>=4.3",
    "Pillow>=10.0",
    "xxhash>=3.0",
    "imageio-ffmpeg>=0.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/Pengfei-Kou/viddup"
Repository = "https://github.com/Pengfei-Kou/viddup"
Issues = "https://github.com/Pengfei-Kou/viddup/issues"

[project.scripts]
viddup = "viddup.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
